--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,8 @@
 {
-    "title":"title",
-    "teacher":"teacher",
-    "subject":"subject",
-    "searchBtn":"searchBtn",
-    "resetBtn":"reset"
+  "title": "title",
+  "teacher": "teacher",
+  "subject": "subject",
+  "searchBtn": "search",
+  "resetBtn": "reset",
+  "courseList": "Course List"
 }
